# beepbop

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
optional_builder/: Cargo.toml
optional_builder/src/: lib.rs
optional_builder/tests/: lib.rs
res/: API_KEY  some_text
src/: bot.rs  error.rs  lib.rs  macros.rs  main.rs  stream.rs  telegram_request.rs  tests.rs  util.rs
src/action/: delete_chat_photo.rs  delete_chat_sticker_set.rs  edit_live_location.rs  export_chat_invite_link.rs  forward_message.rs  get_chat.rs  get_chat_admins.rs  get_chat_member.rs  get_chat_members_count.rs  get_file.rs  get_me.rs  get_updates.rs  get_user_profile_photos.rs  kick_chat_member.rs  leave_chat.rs  mod.rs  pin_message.rs  promote_chat_member.rs  restrict_chat_member.rs  send_animation.rs  send_audio.rs  send_chat_action.rs  send_contact.rs  send_document.rs  send_location.rs  send_media_group.rs  send_message.rs  send_photo.rs  send_venue.rs  send_video.rs  send_video_note.rs  send_voice.rs  set_chat_description.rs  set_chat_photo.rs  set_chat_sticker_set.rs  set_chat_title.rs  stop_live_location.rs  unban_chat_member.rs  unpin_message.rs
src/api/: args.rs  datatypes.rs  error.rs  methods.rs  mod.rs  routes.rs  telegram_request.rs
src/input/: action.rs  chat_id.rs  edit_live_location.rs  export_chat_invite_link.rs  file_uploader.rs  forward_message.rs  get_chat.rs  get_chat_member.rs  get_file.rs  get_updates.rs  get_user_profile_photos.rs  id_uploader.rs  inline_keyboard_button.rs  inline_keyboard_button_message.rs  inline_keyboard_markup.rs  (+26 more)
(+109 files in other folders)
